--- a/login.html
+++ b/login.html
@@ -1,186 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - SMART BURME</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login - Smart Burme</title>
   <style>
-    * {
+    body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
-    }
-
-    body {
-      background-color: #0f0f0f;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(-45deg, #000, #1a1a1a, #000, #1a1a1a);
+      background-size: 400% 400%;
+      animation: backgroundAnim 10s ease infinite;
+      color: white;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
+      justify-content: center;
       height: 100vh;
-      overflow: hidden;
     }
 
-    .container {
-      position: relative;
-      width: 90%;
-      max-width: 400px;
-      background: rgba(31, 41, 58, 0.8);
-      border-radius: 20px;
-      padding: 40px;
-      box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
-      backdrop-filter: blur(5px);
+    @keyframes backgroundAnim {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
-    .container h2 {
-      font-size: 2em;
-      color: #0ef;
-      text-align: center;
-      margin-bottom: 30px;
+    h1 {
+      font-size: 42px;
+      font-weight: bold;
+      animation: float3D 3s ease-in-out infinite, colorShift 3s ease-in-out infinite;
     }
 
-    .input-box {
-      position: relative;
-      margin: 25px 0;
+    @keyframes float3D {
+      0% { transform: rotateY(0deg) translateY(0); }
+      25% { transform: rotateY(15deg) translateY(-10px); }
+      50% { transform: rotateY(0deg) translateY(0); }
+      75% { transform: rotateY(-15deg) translateY(10px); }
+      100% { transform: rotateY(0deg) translateY(0); }
     }
 
-    .input-box input {
-      width: 100%;
-      height: 50px;
-      background: transparent;
-      border: 2px solid #2c4766;
-      outline: none;
-      border-radius: 40px;
-      font-size: 1em;
-      color: #fff;
-      padding: 0 20px;
-      transition: all 0.5s ease;
+    @keyframes colorShift {
+      0% { color: #ccc; }
+      50% { color: #7ec8e3; }
+      100% { color: #ccc; }
     }
 
-    .input-box input:focus,
-    .input-box input:valid {
-      border-color: #0ef;
-      box-shadow: 0 0 10px #0ef;
-    }
-
-    .input-box label {
-      position: absolute;
-      top: 50%;
-      left: 20px;
-      transform: translateY(-50%);
-      font-size: 1em;
-      color: #fff;
-      pointer-events: none;
-      transition: all 0.5s ease;
-    }
-
-    .input-box input:focus~label,
-    .input-box input:valid~label {
-      top: 1px;
-      font-size: .8em;
-      background: #1f293a;
-      padding: 0 6px;
-      color: #0ef;
+    input {
+      padding: 12px;
+      margin: 8px 0;
+      border-radius: 8px;
+      border: none;
+      width: 250px;
+      font-size: 16px;
     }
 
     .btn {
-      width: 100%;
-      height: 45px;
-      background: #0ef;
+      margin: 10px 0;
+      padding: 14px 28px;
+      font-size: 18px;
+      color: white;
+      background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
+      background-size: 200% auto;
       border: none;
-      outline: none;
-      border-radius: 40px;
+      border-radius: 8px;
+      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
       cursor: pointer;
-      font-size: 1em;
-      color: #1f293a;
-      font-weight: 600;
-      transition: all 0.3s;
+      transition: background-position 0.5s ease, transform 0.3s ease;
+      text-decoration: none;
+      display: inline-block;
+      width: 270px;
+      text-align: center;
     }
 
     .btn:hover {
-      background: #09c;
-      box-shadow: 0 0 15px #0ef;
-    }
-
-    .menu {
-      position: fixed;
-      bottom: 30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(8px);
-      border-radius: 30px;
-      padding: 12px 30px;
-      display: flex;
-      justify-content: space-between;
-      gap: 30px;
-      z-index: 2;
-      animation: floatUp 1s ease-out;
-    }
-
-    .menu i {
-      color: #fff;
-      font-size: 24px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-
-    .menu i:hover {
-      color: #0ef;
-      transform: scale(1.2);
-    }
-
-    @keyframes floatUp {
-      from {
-        transform: translateX(-50%) translateY(100px);
-        opacity: 0;
-      }
-      to {
-        transform: translateX(-50%) translateY(0);
-        opacity: 1;
-      }
+      background-position: right center;
+      transform: scale(1.05);
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>Login</h2>
-    <form id="loginForm">
-      <div class="input-box">
-        <input type="email" id="email" required>
-        <label for="email">Gmail</label>
-      </div>
-      <div class="input-box">
-        <input type="password" id="password" required>
-        <label for="password">Password</label>
-      </div>
-      <button type="submit" class="btn">Login</button>
-    </form>
-  </div>
 
-  <div class="menu">
-    <i class="fas fa-home"></i>
-    <i class="fas fa-search"></i>
-    <i class="fas fa-plus-circle"></i>
-    <i class="fas fa-comments"></i>
-    <i class="fas fa-user"></i>
-  </div>
+  <h1>Smart Burme Login</h1>
 
-  <script>
-    document.getElementById("loginForm").addEventListener("submit", function(e) {
-      e.preventDefault();
+  <input type="email" id="email" placeholder="Enter Email" />
+  <input type="password" id="password" placeholder="Enter Password" />
+  <button class="btn" onclick="login()">Login</button>
+
+  <a href="registration.html" class="btn">Register</a>
+  <a href="forget_password.html" class="btn">Forgot Password</a>
+
+  <!-- Firebase SDKs -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
+      authDomain: "smart-burme-app.firebaseapp.com",
+      projectId: "smart-burme-app",
+      storageBucket: "smart-burme-app.appspot.com",
+      messagingSenderId: "851502425686",
+      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+
+    window.login = () => {
       const email = document.getElementById("email").value;
       const password = document.getElementById("password").value;
-
-      // Simple Firebase Authentication Check
-      if (email && password) {
-        alert("Login successful!");
-        window.location.href = "main.html"; // Redirect to main page after successful login
-      } else {
-        alert("Please fill all fields!");
-      }
-    });
+      signInWithEmailAndPassword(auth, email, password)
+        .then((userCredential) => {
+          alert("Login Successful!");
+          window.location.href = "mail.html";
+        })
+        .catch((error) => {
+          alert("Login Failed: " + error.message);
+        });
+    };
   </script>
+
 </body>
 </html>
