--- a/forget_password.html
+++ b/forget_password.html
@@ -1,18 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css">
-    <title>Smart Burme - Forgot Password</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Forgot Password - Smart Burme</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(-45deg, #000, #1a1a1a, #000, #1a1a1a);
+      background-size: 400% 400%;
+      animation: backgroundAnim 10s ease infinite;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+
+    @keyframes backgroundAnim {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    h1 {
+      font-size: 42px;
+      font-weight: bold;
+      animation: float3D 3s ease-in-out infinite, colorShift 3s ease-in-out infinite;
+    }
+
+    @keyframes float3D {
+      0% { transform: rotateY(0deg) translateY(0); }
+      25% { transform: rotateY(15deg) translateY(-10px); }
+      50% { transform: rotateY(0deg) translateY(0); }
+      75% { transform: rotateY(-15deg) translateY(10px); }
+      100% { transform: rotateY(0deg) translateY(0); }
+    }
+
+    @keyframes colorShift {
+      0% { color: #ccc; }
+      50% { color: #7ec8e3; }
+      100% { color: #ccc; }
+    }
+
+    input {
+      padding: 12px;
+      margin: 8px 0;
+      border-radius: 8px;
+      border: none;
+      width: 250px;
+      font-size: 16px;
+    }
+
+    .btn {
+      margin: 10px 0;
+      padding: 14px 28px;
+      font-size: 18px;
+      color: white;
+      background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
+      background-size: 200% auto;
+      border: none;
+      border-radius: 8px;
+      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
+      cursor: pointer;
+      transition: background-position 0.5s ease, transform 0.3s ease;
+      text-decoration: none;
+      display: inline-block;
+      width: 270px;
+      text-align: center;
+    }
+
+    .btn:hover {
+      background-position: right center;
+      transform: scale(1.05);
+    }
+  </style>
 </head>
 <body>
-    <h1>Forgot Password</h1>
-    <form id="forgotPasswordForm" onsubmit="handleForgotPassword(event)">
-        <input type="email" placeholder="Enter your email" required>
-        <button type="submit">Reset Password</button>
-    </form>
-    <p id="message"></p>
-    <script src="scripts/scripts.js"></script>
+
+  <h1>Forgot Password</h1>
+
+  <input type="email" id="email" placeholder="Enter your email" />
+  <button class="btn" onclick="resetPassword()">Reset Password</button>
+
+  <a href="login.html" class="btn">Back to Login</a>
+  <a href="registration.html" class="btn">Create Account</a>
+
+  <!-- Firebase SDKs -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+    import { getAuth, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
+      authDomain: "smart-burme-app.firebaseapp.com",
+      projectId: "smart-burme-app",
+      storageBucket: "smart-burme-app.appspot.com",
+      messagingSenderId: "851502425686",
+      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+
+    window.resetPassword = () => {
+      const email = document.getElementById("email").value;
+      sendPasswordResetEmail(auth, email)
+        .then(() => {
+          alert("Password reset email sent!");
+          window.location.href = "login.html";
+        })
+        .catch((error) => {
+          alert("Error: " + error.message);
+        });
+    };
+  </script>
+
 </body>
 </html>
