--- a/index.html
+++ b/index.html
@@ -1,85 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Burme</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Smart Burme</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-    body {
-      background: linear-gradient(-45deg, #000000, #1a1a1a, #000000, #1a1a1a);
-      background-size: 400% 400%;
-      animation: backgroundAnimation 10s ease infinite;
-      color: white;
-      font-family: Arial, sans-serif;
-      height: 100vh;
-      overflow: hidden;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
+    body {
+      background: linear-gradient(-45deg, #000000, #1a1a1a, #000000, #1a1a1a);
+      background-size: 400% 400%;
+      animation: backgroundAnimation 10s ease infinite;
+      color: white;
+      font-family: Arial, sans-serif;
+      height: 100vh;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
 
-    @keyframes backgroundAnimation {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
+    /* Background animation */
+    @keyframes backgroundAnimation {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
 
-    #floating-text {
-      font-size: 60px;
-      font-weight: bold;
-      animation: float3D 3s ease-in-out, grayBlueChange 3s ease-in-out;
-      perspective: 800px;
-    }
+    /* Floating text effect */
+    #floating-text {
+      font-size: 60px;
+      font-weight: bold;
+      animation: float3D 3s ease-in-out, grayBlueChange 3s ease-in-out;
+      perspective: 800px;
+    }
 
-    @keyframes float3D {
-      0% { transform: rotateY(0deg) translateY(0); }
-      25% { transform: rotateY(15deg) translateY(-10px); }
-      50% { transform: rotateY(0deg) translateY(0); }
-      75% { transform: rotateY(-15deg) translateY(10px); }
-      100% { transform: rotateY(0deg) translateY(0); }
-    }
+    @keyframes float3D {
+      0% { transform: rotateY(0deg) translateY(0); }
+      25% { transform: rotateY(15deg) translateY(-10px); }
+      50% { transform: rotateY(0deg) translateY(0); }
+      75% { transform: rotateY(-15deg) translateY(10px); }
+      100% { transform: rotateY(0deg) translateY(0); }
+    }
 
-    @keyframes grayBlueChange {
-      0% { color: #999; }
-      50% { color: #66ccff; }
-      100% { color: #999; }
-    }
+    @keyframes grayBlueChange {
+      0% { color: #999; }
+      50% { color: #66ccff; }
+      100% { color: #999; }
+    }
 
-    .welcome-text {
-      display: none;
-      font-size: 24px;
-      margin-top: 20px;
-      animation: fadeText 2s ease-in-out forwards;
-    }
+    /* Loading Spinner */
+    .loading-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+      display: none; /* Hidden by default */
+    }
 
-    @keyframes fadeText {
-      0% { opacity: 0; transform: translateY(50px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
+    .spinner {
+      border: 8px solid rgba(255, 255, 255, 0.3);
+      border-top: 8px solid #00d4ff;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      animation: spin 1s linear infinite;
+    }
 
-    #buttons {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      margin-top: 50px;
-    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
 
-    .btn {
-      opacity: 0;
-      text-decoration: none;
-      text-align: center;
-      background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
-      background-size: 200% auto;
-      color: white;
-      padding: 15px 30px;
-      border-radius: 10px;
-      font-size: 18px;
-      font-weight: bold;
-      transition: background-position 0.5s ease, transform 0
+    /* Welcome text fade in */
+    .welcome-text {
+      display: none;
+      font-size: 24px;
+      margin-top: 20px;
+      animation: fadeText 2s ease-in-out forwards;
+    }
+
+    @keyframes fadeText {
+      0% { opacity: 0; transform: translateY(50px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
+    #buttons {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      margin-top: 50px;
+      opacity: 0;
+      animation: fadeButtons 2s forwards;
+      animation-delay: 5s;
+    }
+
+    @keyframes fadeButtons {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .btn {
+      text-decoration: none;
+      text-align: center;
+      background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
+      background-size: 200% auto;
+      color: white;
+      padding: 15px 30px;
+      border-radius: 10px;
+      font-size: 18px;
+      font-weight: bold;
+      transition: background-position 0.5s ease, transform 0.3s ease;
+      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
+    }
+
+    .btn:hover {
+      background-position: right center;
+      transform: scale(1.05);
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Loading Overlay (Spinner) -->
+  <div class="loading-overlay" id="loadingOverlay">
+    <div class="spinner"></div>
+  </div>
+
+  <div id="floating-text">Smart Burme</div>
+
+  <div id="welcome-text" class="welcome-text">
+    Smart Burme App မှ ကြိုဆိုပါတယ်
+  </div>
+
+  <div id="buttons">
+    <a href="login.html" class="btn">Login</a>
+    <a href="registration.html" class="btn">Register</a>
+    <a href="forget_password.html" class="btn">Forgot Password</a>
+  </div>
+
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
+
+  <script>
+    // Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
+      authDomain: "smart-burme-app.firebaseapp.com",
+      projectId: "smart-burme-app",
+      storageBucket: "smart-burme-app.appspot.com",
+      messagingSenderId: "851502425686",
+      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
+    };
+
+    // Initialize Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+
+    // Show loading overlay while Firebase is loading
+    document.getElementById("loadingOverlay").style.display = "flex";
+
+    // Simulate delay to show loading spinner (remove in production)
+    setTimeout(() => {
+      // Hide the loading spinner when the content is ready
+      document.getElementById("loadingOverlay").style.display = "none";
+      
+      // Display the welcome text after 3 seconds
+      setTimeout(() => {
+        document.getElementById("welcome-text").style.display = "block";
+      }, 3000);
+      
+      // Show the buttons after the welcome message
+      setTimeout(() => {
+        document.querySelectorAll('.btn').forEach(button => {
+          button.style.opacity = '1';
+          button.style.transform = 'translateY(0)';
+        });
+      }, 5000);
+    }, 3000); // You can change this to the actual Firebase load time if needed
+
+  </script>
+
+</body>
+</html>
